added the toc in page location
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@36261 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/pelt-dev/css/screen.css
+++ b/src/core/context/skins/pelt-dev/css/screen.css
@@ -325,6 +325,19 @@ img.cornersmall {
 
 acronym { cursor: help; }
 
+#minitoc-area {
+	border-top: solid 1px #4C6C8F;
+	border-bottom: solid 1px #4C6C8F;	
+	margin-bottom: 15px;
+	margin-left: 15px;
+	padding-bottom: 5px;
+	padding-top: 5px;
+}
+#minitoc    { 
+	list-style-image: url('images/current.gif'); 
+	font-weight: normal;
+	font-size: 80%;
+}
 li p {
 	margin: 0;
 	padding: 0;
