added heading scheme support
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@36264 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/pelt-dev/css/screen.css
+++ b/src/core/context/skins/pelt-dev/css/screen.css
@@ -13,10 +13,17 @@
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-body {
-	margin: 0;
-	padding: 0;
-}
+body {  margin: 0px 0px 0px 0px; font-family: Verdana, Helvetica, sans-serif; }
+
+h1     { font-size : 160%; margin: 0px 0px 0px 0px;  padding: 0px; }
+h2     { font-size : 140%; margin: 10px 0px 0px 0px; padding: 18px; font-weight : bold;}
+h3     { font-size : 130%; margin: 0px 0px 0px 0px; padding: 0px; font-weight : bold; }
+.h3 { margin: 22px 0px 3px 0px; }
+h4     { font-size : 120%; margin: 0px 0px 0px 0px; padding: 0px; font-weight : normal; text-align: left; }
+.h4 { margin: 18px 0px 0px 0px; }
+h4.faq { font-size : 120%; margin: 18px 0px 0px 0px; padding: 0px; font-weight : bold;   text-align: left; }
+h5     { font-size : 100%; margin: 14px 0px 0px 0px; padding: 0px; font-weight : normal; text-align: left; }
+
 
 /**
  * Page Header
@@ -268,9 +275,12 @@ img.cornersmall {
 #menu #credit {
 	text-align: center;  
 }
+
 #content {
 	padding: 20px 20px 20px 180px;
 	margin: 0;
+	font : small Verdana, Helvetica, sans-serif;  
+	font-size : 80%; 
 }
 
 #content ul {
@@ -324,7 +334,8 @@ img.cornersmall {
  */
 
 acronym { cursor: help; }
-
+.boxed 	 { background-color: #a5b6c6;}
+.underlined 	{border-bottom: solid 1px #4C6C8F;}
 #minitoc-area {
 	border-top: solid 1px #4C6C8F;
 	border-bottom: solid 1px #4C6C8F;	
@@ -336,7 +347,6 @@ acronym { cursor: help; }
 #minitoc    { 
 	list-style-image: url('images/current.gif'); 
 	font-weight: normal;
-	font-size: 80%;
 }
 li p {
 	margin: 0;
