- added external link image support - enhanced the underline
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@36266 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/pelt-dev/css/screen.css
+++ b/src/core/context/skins/pelt-dev/css/screen.css
@@ -335,7 +335,8 @@ img.cornersmall {
 
 acronym { cursor: help; }
 .boxed 	 { background-color: #a5b6c6;}
-.underlined 	{border-bottom: solid 1px #4C6C8F;}
+.underlined_5 	{border-bottom: solid 5px #4C6C8F;}
+.underlined_10 	{border-bottom: solid 10px #4C6C8F;}
 #minitoc-area {
 	border-top: solid 1px #4C6C8F;
 	border-bottom: solid 1px #4C6C8F;	
