finished the crust menu and fixed the copyless issue thanks to Rick Tessner
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@36307 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/pelt-dev/css/screen.css
+++ b/src/core/context/skins/pelt-dev/css/screen.css
@@ -83,8 +83,6 @@ html>body #top .searchbox {
 	bottom: 0px;
 }
 #top .searchbox form {
-
-	
 	padding: 5px 10px;
 	margin: 0;
 }
@@ -217,6 +215,12 @@ img.cornersmall {
 /**
  * Side menu
  */
+#menu a {  font-weight: normal;}
+#menu a:visited {  font-weight: normal; }
+#menu a:active {  font-weight: normal; }
+#menu a:hover {  font-weight: normal; }
+
+#menuarea { width:10em;}
 #menu {
 	position: relative;
 	float: left;
@@ -227,50 +231,63 @@ img.cornersmall {
 	z-index: 20;
 	background-color: #f90;
 }
-#menu h1 {
-	display: block;
-	padding: 3px 12px;
-	background-color: #cfdced;
-	color: black;
-	font-size: 110%;
-	border-top: solid #336699 1px;
-	border-bottom: 1px solid #336699;
-	border-right: solid #336699 2px;
-	border-left: solid #336699 2px;
+
+.menutitle { 
+        cursor:pointer;
+        padding: 3px 12px;
+		margin-left: 10px;
+        background-image: url('images/chapter.gif');
+        background-repeat: no-repeat;
+        background-position: center left;
+        font-weight : bold;
 }
-#menu ul {
-	width: 160px;
-	list-style: none;
-	padding: 0 0 1em 0;
-	margin: 0;
+
+#menu .menuitemgroup { 
+        margin: 0px 0px 6px 8px; 
+        padding: 0px;  
+        font-weight : bold; }
+        
+#menu .selectedmenuitemgroup{ 
+        margin: 0px 0px 6px 8px; 
+        padding: 0px;  
+        font-weight : bold; }
+        
+#menu .menuitem { 
+        padding: 0px 0px 2px 12px;  
+        background-image: url('images/page.gif');
+        background-repeat: no-repeat;
+        background-position: center left;
+        font-weight : normal; 
+        margin-left: 10px;
 }
-#menu ul ul ul {
-	padding: 0;
-	width: 145px;
+
+#menu .menupage {         
+        margin: 5px 0px 5px 10px; 
+        padding: 0px 3px 0px 12px;  
+        background-image: url('images/current.gif');
+        background-repeat: no-repeat;
+        background-position: top left;
+        font-style : normal;
 }
-#menu li li {
-	padding: 3px 0px 3px 12px;
-	margin: 0;
+#menu .menupagetitle { 
+        padding: 0px 0px 0px 6px;     
+        font-style : normal;
+        border-style: solid; 
+        border-width: 1px;
+        margin-right: 10px;
 }
-#menu li li h1 {
-	/* nested directories */
-	font: normal 90% verdana, "Trebuchet MS", arial, helvetica, sans-serif;
-	color: white;
-	background: transparent;
-	border: none;
-	padding: 3px 0;
-	margin: 0;
+#menu .menupageitemgroup { 
+        padding: 3px 0px 4px 6px;    
+        font-style : normal;
+        border-bottom: 1px solid ;
+        border-left: 1px solid ;
+        border-right: 1px solid ;        
 }
-#menu li a {
-	font-size: 90%;
-	color: white;
-	text-decoration: none;
-}
-#menu li a:hover { font-weight: bold; }
-#menu li .current {
-	color: #FFCC33;
-	font-weight: bold;
-	font-size: 90%;
+#menu .menupageitem {             
+        font-style : normal;
+        font-weight : normal; 
+        border-width: 0px;
+        font-size : 90%;
 }
 #menu #credit {
 	text-align: center;  
@@ -345,7 +362,7 @@ acronym { cursor: help; }
 	padding-bottom: 5px;
 	padding-top: 5px;
 }
-#minitoc    { 
+.minitoc    { 
 	list-style-image: url('images/current.gif'); 
 	font-weight: normal;
 }
