Finished all blockers from pelt-dev (rest is enhancement). -Added innemenu to pelt-dev -Fixed innermenu by crust and pelt-dev
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@36317 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/pelt-dev/css/screen.css
+++ b/src/core/context/skins/pelt-dev/css/screen.css
@@ -230,6 +230,7 @@ img.cornersmall {
 	left:10px; 
 	z-index: 20;
 	background-color: #f90;
+	font-size : 70%;    
 }
 
 .menutitle { 
@@ -282,6 +283,7 @@ img.cornersmall {
         border-bottom: 1px solid ;
         border-left: 1px solid ;
         border-right: 1px solid ;        
+        margin-right: 10px;
 }
 #menu .menupageitem {             
         font-style : normal;
