--- a/src/core/context/skins/pelt-dev/css/screen.css
+++ b/src/core/context/skins/pelt-dev/css/screen.css
@@ -24,7 +24,29 @@ h4     { font-size : 120%; margin: 0px 0px 0px 0px; padding: 0px; font-weight : 
 h4.faq { font-size : 120%; margin: 18px 0px 0px 0px; padding: 0px; font-weight : bold;   text-align: left; }
 h5     { font-size : 100%; margin: 14px 0px 0px 0px; padding: 0px; font-weight : normal; text-align: left; }
 
-
+/**
+* table
+*/
+table .title { background-color: #000000; }
+.ForrestTable         { 
+	color: #ffffff; 
+	background-color: #7099C5;
+	width: 100%; 
+	font-size : 100%; 
+	empty-cells: show;
+}
+table caption { 
+	padding-left: 5px;
+	color: white;
+	text-align: left; 
+	font-weight: bold; 
+	background-color: #000000;
+}
+.ForrestTable td { 
+	color: black;   
+	background-color: #f0f0ff; 
+}
+.ForrestTable th { text-align: center; }
 /**
  * Page Header
  */
