--- a/src/core/context/skins/leather-dev/css/xnc-base.css
+++ b/src/core/context/skins/leather-dev/css/xnc-base.css
@@ -171,6 +171,13 @@ text-align: right;
 white-space:nowrap;
 background-color: #4C6C8F;
 }
+
+/*
+#nav-section-current
+Navigation to page within the current site section that is currently 
+selected.
+*/
+
 /*
 #nav-main
 Main or primary navigation AKA tabs.
