--- a/src/core/context/skins/leather-dev/css/xnc-base.css
+++ b/src/core/context/skins/leather-dev/css/xnc-base.css
@@ -10,168 +10,103 @@ border-top: solid 1px black;
 border-bottom: solid 1px black;
 border-right: solid 1px black;
 border-left: solid 1px black;
+margin: 5px;
+}
+
+#content-main{
+/*The main content area
+*/
+padding: 20px 20px 0px 180px;
+margin: 0;
+font : small Verdana, Helvetica, sans-serif;  
+font-size : 80%; 
+background-color: #fff;
+/* */
+/*border-style: solid;
+border-color: #000;
+border-left: 2px;
+border-right: 2px;*/
+
+
+border: solid 1px black;
+}
+#siteinfo-credits{
+/*Designer or other credits
+*/
 margin: 10px;
+padding: 5px;
+text-align: center;
+border-style: dashed;
+border-width: medium;/* sets border width on all sides */
+border-color: black;
 }
-#branding {
-/*Container used for a header and banner to brand the site.
+#nav-supp{
+/*A supplementary list of links
 */
-position: relative;
-float: left;
+clear: both;
+/*position: relative; *//* IE bugfix (http://www.dracos.co.uk/web/css/ie6floatbug/) */
 width: 100%;
-background: #294563; 
-}
-#branding-trail{
-/*Used for the trail of the site.
-*/
-background: #CFDCED;
+background-color: #CFDCED;
+border: solid 1px black;
 color: black;
-border-bottom: solid 1px black;
-padding: 3px 10px;
-font-size: 75%;
+font-size: 90%;
+padding: 0px;
+margin: 0px;
 }
-#branding-trail-a1{
-/*Used for the trail of the site.
+#nav-supp .siteinfo-legal{
+/*Copyright information etc.
 */
-	position: relative;
-	background: #CFDCED;
-	color: black;
-	border-bottom: solid 1px black;
-	border-top: solid 1px black;
-	padding: 0px 180px;
-	font-size: 75%;
-	z-index:10;
+/*position: relative; *//* IE bugfix cont'd */
+/*padding: 5px;*/
+margin-top: 5px;
+margin-left: 5px;
+width: 45%;
+/*background: yellow;*/
+/*float: left;*/
 }
-#branding .grouplogo {
-/*Used for the grouplogo.
-*/
-padding: 7px 0 10px 10px;
-float: left;
-text-align: left;
-}
-#branding .projectlogo {
-/*Used for the projectlogo.
-*/
-padding: 7px 0 10px 10px;
-float: left;
-width: 33%;
+#nav-supp .lastmodified{
+/*position: relative;*/ /* IE bugfix cont'd */
+float: right;
+/*width: 45%;*/
+/*padding: 5px;*/
+margin-top: 5px;
+margin-right:5px;
+padding-right: 5px;
 text-align: right;
 }
-#branding .projectlogoA1 {
-/*Used for the projectlogo in alternativ location.
-*/
-padding: 7px 0 10px 10px;
-float: right;
+#feedback {
+color: #fff;
+background-color: #294563;
+text-align:center;
+margin-top: 5px;
 }
-/*
-#search
-Related to search interface and search results
-
-#search-input
-Search form container
-*/
-#branding .searchbox {
-/*Related to search interface and search results
-*/
-	position: absolute;
-	right: 10px;
-	height: 42px;
-	font-size: 70%;
-	white-space: nowrap;
-	text-align: right;
-	color: white;
-	background-color: #ccc;
-	z-index:0;
-	bottom: -1px; /* compensate for IE rendering issue */
+#feedback #feedbackto {
+font-size: 90%;
+color: #fff;
 }
-html>body #branding .searchbox {
-	bottom: 0px;
-}
-#branding .searchbox form {
-	padding: 5px 10px;
+#content-pdf{
+/*The pdf link for the content*/
+	float: right;
 	margin: 0;
+	padding: 0;
 }
-#branding .searchbox p {
-	padding: 0 0 2px 0;
+#content-pdf br {
+	margin-top: -10px;
+	padding-left: 1px;
+}
+#content-pdf a {
+	display: block;
+	font-size: 90%;
+	text-align: center;
 	margin: 0;
-}
-/*
-#nav-main
-Main or primary navigation AKA tabs.
-*/
-/*
-#nav-main-sub
-Secondary navigation AKA level2.
-*/
-#nav-main {
-	clear: both;
-	padding-left: 10px;
-	margin: 0;
-	list-style: none;
-	font-size : 75%;
-}
-/*	background: #CFDCED url("images/tab-right.gif") no-repeat right top;*/
-#nav-main li {
-	float: left;
-	background-image: url(images/rc-t-r-5-1header-2tab-unselected-3tab-unselected.png);
-	background-repeat: no-repeat;
-	background-position: top right;
-	background-color: #ffffff;
-	margin: 0 3px 0 0;
 	padding: 0;
 }
 
-/*background: url("images/tab-left.gif") no-repeat left top;*/
-#nav-main li a {
-	float: left;
+#content-pdf img {
 	display: block;
-	font-family: verdana, arial, sans-serif;
-	text-transform: uppercase;
-	text-decoration: none;
-	color: black;
-	white-space: nowrap;
-	background-image: url(images/rc-t-l-5-1header-2tab-unselected-3tab-unselected.png);
-	background-repeat: no-repeat;
-	background-position: top left;
-	padding: 5px 15px 4px;
-	width: .1em; /* IE/Win fix */
+	height: 32px;
+	width: 32px;
 }
-
-#nav-main > li a { width: auto; } /* Rest of IE/Win fix */
-
-/* Commented Backslash Hack hides rule from IE5-Mac \*/
-#nav-main a { float: none; }
-/* End IE5-Mac hack */
-/*
-#nav-main .current
-Main or primary navigation that is currently selected.
-*/
-#nav-main .current {
-	background-color: #4C6C8F;
-	background-image: url(images/rc-t-r-5-1header-2tab-selected-3tab-selected.png);
-	background-repeat: no-repeat;
-	background-position: top right;
-}
-#nav-main .current a {
-	font-weight: bold;
-	padding-bottom: 5px;
-	color: white;
-	background-image: url(images/rc-t-l-5-1header-2tab-selected-3tab-selected.png);
-	background-repeat: no-repeat;
-	background-position: top left;
-}
-
-#branding-published{
-/*Used for the last published note of the site.
-*/
-clear: both;
-padding-right: 10px;
-color: #ffffff;
-font-size : 60%; 
-text-align: right;  
-white-space:nowrap;
-background-color: #4C6C8F;
-}
-
 /*
 #nav-section-current
 Navigation to page within the current site section that is currently 
