Fix search box round corners in pelt.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@43462 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/pelt/css/screen.css
+++ b/src/core/context/skins/pelt/css/screen.css
@@ -99,6 +99,9 @@ table caption {
     color: white;
     background-color: #000000;
     z-index:0;
+    background-image: url(images/rc-t-l-5-1header-2searchbox-3searchbox.png);
+    background-repeat: no-repeat;
+    background-position: top left;    
     bottom: -1px; /* compensate for IE rendering issue */
 }
 html>body #top .searchbox {
@@ -215,10 +218,11 @@ img.corner {
    border: none;
    display: block !important;
 }
-#roundtopsmall { 
+
+.roundtopsmall { 
     background-image: url(images/rc-t-r-5-1header-2searchbox-3searchbox.png);
     background-repeat: no-repeat;
-    background-position: top right;
+    background-position: top right;    
 }
 
 #roundbottomsmall {
