Make the search box fonts smaller by telling the browser to apply the css size to input tags.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@43480 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/pelt/css/screen.css
+++ b/src/core/context/skins/pelt/css/screen.css
@@ -115,6 +115,9 @@ html>body #top .searchbox {
     padding: 0 0 2px 0;
     margin: 0;
 }
+#top .searchbox input {
+    font-size: 100%;
+}
 
 #tabs {
     clear: both;
