--- a/src/core/context/skins/pelt/css/screen.css
+++ b/src/core/context/skins/pelt/css/screen.css
@@ -199,6 +199,16 @@ html>body #top .searchbox {
     font-size: 75%;
     z-index:10;
 }
+/* ==================== snail trail ============================ */
+
+.trail {
+  font-size: 70%; 
+  text-align: right;
+}
+.trail a:link {  font-weight: normal; }
+.trail a:visited {  font-weight: normal; }
+.trail a:active {  font-weight: normal; }
+.trail a:hover {  font-weight: normal; }
 
 /**
 * Round corner
@@ -254,7 +264,7 @@ img.cornersmall {
     float: left;
     width: 160px;
     padding-top: 0px;
-    top:-17px; 
+    top:-18px; 
     left:10px; 
     z-index: 20;
     background-color: #f90;
@@ -389,6 +399,7 @@ acronym { cursor: help; }
     border-bottom: solid 1px #4C6C8F;    
     margin-bottom: 15px;
     margin-left: 15px;
+    margin-right: 25px;
     padding-bottom: 5px;
     padding-top: 5px;
 }
