fixed some color profiling issues
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@43487 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/pelt/css/screen.css
+++ b/src/core/context/skins/pelt/css/screen.css
@@ -199,17 +199,6 @@ html>body #top .searchbox {
     font-size: 75%;
     z-index:10;
 }
-/* ==================== snail trail ============================ */
-
-.trail {
-  font-size: 70%; 
-  text-align: right;
-}
-.trail a:link {  font-weight: normal; }
-.trail a:visited {  font-weight: normal; }
-.trail a:active {  font-weight: normal; }
-.trail a:hover {  font-weight: normal; }
-
 /**
 * Round corner
 */
@@ -394,12 +383,22 @@ acronym { cursor: help; }
 .boxed      { background-color: #a5b6c6;}
 .underlined_5     {border-bottom: solid 5px #4C6C8F;}
 .underlined_10     {border-bottom: solid 10px #4C6C8F;}
+/* ==================== snail trail ============================ */
+
+.trail {
+  font-size: 70%; 
+  text-align: right;
+  float: right;
+  margin: 0px 5px;
+  padding: 0;
+}
+
 #minitoc-area {
     border-top: solid 1px #4C6C8F;
     border-bottom: solid 1px #4C6C8F;    
     margin-bottom: 15px;
     margin-left: 15px;
-    margin-right: 25px;
+    margin-right: 10%;
     padding-bottom: 5px;
     padding-top: 5px;
 }
@@ -414,7 +413,7 @@ li p {
 
 .pdflink {
     float: right;
-    margin: 0;
+    margin: 0px 5px;
     padding: 0;
 }
 .pdflink br {
