Add the "font size" controller. Some other skin tweaks.
git-svn-id: https://svn.apache.org/repos/asf/forrest/site@43573 13f79535-47bb-0310-9956-ffa450edef68

--- a/skin/profile.css
+++ b/skin/profile.css
@@ -55,21 +55,24 @@ table caption {
 	color: #000000;
 }
 
-#main .breadtrail {
-	background: #cedfef; 
-	color: #0F3660;
+#published { 
+    color: #FFFFFF;
+    background: #4C6C8F; 
 }
-#main .breadtrail a:link {  color: #0F3660;  }
-#main .breadtrail a:visited { color: #0F3660; }
-#main .breadtrail a:hover { color: #000066; }
-#top .breadtrail {
-	background: #cedfef; 
-	color: #0F3660;
+    
+#feedback {
+	color: #FFFFFF;
+	background: #4C6C8F;
+	text-align: center;
 }
-#top .breadtrail a:link {  color: #0F3660;  }
-#top .breadtrail a:visited { color: #0F3660; }
-#top .breadtrail a:hover { color: #000066; }
+#feedback #feedbackto {
+	color: #FFFFFF;
+}   
 
+#published { 
+    color: #ffffff;
+    background: #4a6d8c; 
+}
 
 #menu .menupagetitle  { background-color: #4a6d8c}
 
@@ -84,6 +87,16 @@ table caption {
 #menu a:hover {  background-color: #4a6d8c;
                  color: #ffcf00;} 
 #menu .menupagetitle  { color: #ffcf00;}     
+
+#menu h1 {
+    color: #000000;
+    background-color: #cfdced;
+}   
+ 
+#top .searchbox { 
+    background-color: #E5E4D9 ;
+    color: #000000; 
+} 
  
 #menu .menupageitemgroup     { 
 	background-color: #4a6d8c;
@@ -91,6 +104,13 @@ table caption {
 #menu .menupageitem {
 	color: #000000;
 } 
+
+body         { background-color: #ffffff;
+               color: #000000;} 
+a:link { color:#0F3660} 
+a:visited { color:#009999} 
+a:hover { color:#000066} 
+
  
 .ForrestTable      { background-color: #7099C5;} 
  
@@ -107,22 +127,3 @@ table caption {
 .code         { border-color: #CFDCED;} 
  
 #footer       { background-color: #cedfef;} 
-    
-#feedback {
-	color: #FFFFFF;
-	background: #4C6C8F;
-	text-align: center;
-}
-#feedback #feedbackto {
-	color: #FFFFFF;
-}   
-
-#published { 
-    color: #FFFFFF;
-    background: #4C6C8F; 
-}
- 
-#top .searchbox { 
-    background-color: #E5E4D9 ;
-    color: #000000; 
-} 
