--- a/skin/screen.css
+++ b/skin/screen.css
@@ -29,22 +29,22 @@ h5     { font-size : 100%; margin: 14px 0px 0px 0px; padding: 0px; font-weight :
 */
 table .title { background-color: #000000; }
 .ForrestTable         { 
-	color: #ffffff; 
-	background-color: #7099C5;
-	width: 100%; 
-	font-size : 100%; 
-	empty-cells: show;
+    color: #ffffff; 
+    background-color: #7099C5;
+    width: 100%; 
+    font-size : 100%; 
+    empty-cells: show;
 }
 table caption { 
-	padding-left: 5px;
-	color: white;
-	text-align: left; 
-	font-weight: bold; 
-	background-color: #000000;
+    padding-left: 5px;
+    color: white;
+    text-align: left; 
+    font-weight: bold; 
+    background-color: #000000;
 }
 .ForrestTable td { 
-	color: black;   
-	background-color: #f0f0ff; 
+    color: black;   
+    background-color: #f0f0ff; 
 }
 .ForrestTable th { text-align: center; }
 /**
@@ -52,97 +52,103 @@ table caption {
  */
 
 #top {
-	position: relative;
-	float: left;
-	width: 100%;
-	background: #294563; /* if you want a background in the header, put it here */
+    position: relative;
+    float: left;
+    width: 100%;
+    background: #294563; /* if you want a background in the header, put it here */
 }
 
 #top .breadtrail {
-	background: #CFDCED;
-	color: black;
-	border-bottom: solid 1px white;
-	padding: 3px 10px;
-	font-size: 75%;
+    background: #CFDCED;
+    color: black;
+    border-bottom: solid 1px white;
+    padding: 3px 10px;
+    font-size: 75%;
 }
 #top .breadtrail a { color: black; }
 
 #top .header {
-	float: left;
-	width: 100%;
-	background: url("images/header_white_line.gif") repeat-x bottom;
+    float: left;
+    width: 100%;
+    background: url("images/header_white_line.gif") repeat-x bottom;
 }
 
 #top .grouplogo {
-	padding: 7px 0 10px 10px;
-	float: left;
-	text-align: left;
+    padding: 7px 0 10px 10px;
+    float: left;
+    text-align: left;
 }
 #top .projectlogo {
-	padding: 7px 0 10px 10px;
-	float: left;
-	width: 33%;
-	text-align: right;
+    padding: 7px 0 10px 10px;
+    float: left;
+    width: 33%;
+    text-align: right;
 }
 #top .projectlogoA1 {
-	padding: 7px 0 10px 10px;
-	float: right;
+    padding: 7px 0 10px 10px;
+    float: right;
 }
 
 #top .searchbox {
-	position: absolute;
-	right: 10px;
-	height: 42px;
-	font-size: 70%;
-	white-space: nowrap;
-	text-align: right;
-	color: white;
-	background-color: #000000;
-	z-index:0;
-	bottom: -1px; /* compensate for IE rendering issue */
+    position: absolute;
+    right: 10px;
+    height: 42px;
+    font-size: 70%;
+    white-space: nowrap;
+    text-align: right;
+    color: white;
+    background-color: #000000;
+    z-index:0;
+    background-image: url(images/rc-t-l-5-1header-2searchbox-3searchbox.png);
+    background-repeat: no-repeat;
+    background-position: top left;    
+    bottom: -1px; /* compensate for IE rendering issue */
 }
 html>body #top .searchbox {
-	bottom: 0px;
+    bottom: 0px;
 }
 #top .searchbox form {
-	padding: 5px 10px;
-	margin: 0;
+    padding: 5px 10px;
+    margin: 0;
 }
 #top .searchbox p {
-	padding: 0 0 2px 0;
-	margin: 0;
+    padding: 0 0 2px 0;
+    margin: 0;
+}
+#top .searchbox input {
+    font-size: 100%;
 }
 
 #tabs {
-	clear: both;
-	padding-left: 10px;
-	margin: 0;
-	list-style: none;
+    clear: both;
+    padding-left: 10px;
+    margin: 0;
+    list-style: none;
 }
-/*	background: #CFDCED url("images/tab-right.gif") no-repeat right top;*/
+/*    background: #CFDCED url("images/tab-right.gif") no-repeat right top;*/
 #tabs li {
-	float: left;
-	background-image: url(images/rc-t-r-5-1header-2tab-unselected-3tab-unselected.png);
-	background-repeat: no-repeat;
-	background-position: top right;
-	background-color: #000000;
-	margin: 0 3px 0 0;
-	padding: 0;
+    float: left;
+    background-image: url(images/rc-t-r-5-1header-2tab-unselected-3tab-unselected.png);
+    background-repeat: no-repeat;
+    background-position: top right;
+    background-color: #000000;
+    margin: 0 3px 0 0;
+    padding: 0;
 }
 
 /*background: url("images/tab-left.gif") no-repeat left top;*/
 #tabs li a {
-	float: left;
-	display: block;
-	font-family: verdana, arial, sans-serif;
-	text-decoration: none;
-	color: black;
-	white-space: nowrap;
-	background-image: url(images/rc-t-l-5-1header-2tab-unselected-3tab-unselected.png);
-	background-repeat: no-repeat;
-	background-position: top left;
-	padding: 5px 15px 4px;
-	width: .1em; /* IE/Win fix */
+    float: left;
+    display: block;
+    font-family: verdana, arial, sans-serif;
+    text-decoration: none;
+    color: black;
+    white-space: nowrap;
+    background-image: url(images/rc-t-l-5-1header-2tab-unselected-3tab-unselected.png);
+    background-repeat: no-repeat;
+    background-position: top left;
+    padding: 5px 15px 4px;
+    width: .1em; /* IE/Win fix */
 }
 
 #tabs > li a { width: auto; } /* Rest of IE/Win fix */
@@ -152,61 +158,60 @@ html>body #top .searchbox {
 /* End IE5-Mac hack */
 
 #top .header .current {
-	background-color: #4C6C8F;
-	background-image: url(images/rc-t-r-5-1header-2tab-selected-3tab-selected.png);
-	background-repeat: no-repeat;
-	background-position: top right;
+    background-color: #4C6C8F;
+    background-image: url(images/rc-t-r-5-1header-2tab-selected-3tab-selected.png);
+    background-repeat: no-repeat;
+    background-position: top right;
 }
 #top .header .current a {
-	font-weight: bold;
-	padding-bottom: 5px;
-	color: white;
-	background-image: url(images/rc-t-l-5-1header-2tab-selected-3tab-selected.png);
-	background-repeat: no-repeat;
-	background-position: top left;
+    font-weight: bold;
+    padding-bottom: 5px;
+    color: white;
+    background-image: url(images/rc-t-l-5-1header-2tab-selected-3tab-selected.png);
+    background-repeat: no-repeat;
+    background-position: top left;
 }
 #published { 
-	padding-right: 10px;
-	color: #ffffff;
-	font-size : 60%; 
-	text-align: right;  
-	white-space:nowrap;
-	background-color: #4C6C8F;
+    padding-right: 10px;
+    color: #ffffff;
+    font-size : 60%; 
+    text-align: right;  
+    white-space:nowrap;
+    background-color: #4C6C8F;
 }
 
 /*
-*	border-top: solid #4C6C8F 15px;
+*    border-top: solid #4C6C8F 15px;
 */
 #main {
-	position: relative;
-	clear: both;
-	background: white;
+    position: relative;
+    clear: both;
+    background: white;
 
 }
 #main .breadtrail {
-	position: relative;
-	background: #CFDCED;
-	color: black;
-	border-bottom: solid 1px black;
-	border-top: solid 1px black;
-	padding: 0px 180px;
-	font-size: 75%;
-	z-index:10;
+    position: relative;
+    background: #CFDCED;
+    color: black;
+    border-bottom: solid 1px black;
+    border-top: solid 1px black;
+    padding: 0px 180px;
+    font-size: 75%;
+    z-index:10;
 }
-
 /**
 * Round corner
 */
 #roundtop { 
-	background-image: url(images/rc-t-r-15-1body-2menu-3menu.png);
-	background-repeat: no-repeat;
-	background-position: top right;
+    background-image: url(images/rc-t-r-15-1body-2menu-3menu.png);
+    background-repeat: no-repeat;
+    background-position: top right;
 }
 
 #roundbottom {
-	background-image: url(images/rc-b-r-15-1body-2menu-3menu.png);
-	background-repeat: no-repeat;
-	background-position: top right;
+    background-image: url(images/rc-b-r-15-1body-2menu-3menu.png);
+    background-repeat: no-repeat;
+    background-position: top right;
 }
 
 img.corner {
@@ -215,16 +220,17 @@ img.corner {
    border: none;
    display: block !important;
 }
-#roundtopsmall { 
-	background-image: url(images/rc-t-r-5-1header-2searchbox-3searchbox.png);
-	background-repeat: no-repeat;
-	background-position: top right;
+
+.roundtopsmall { 
+    background-image: url(images/rc-t-r-5-1header-2searchbox-3searchbox.png);
+    background-repeat: no-repeat;
+    background-position: top right;    
 }
 
 #roundbottomsmall {
-	background-image: url(images/rc-b-r-5-1header-2tab-selected-3tab-selected.png);
-	background-repeat: no-repeat;
-	background-position: top right;
+    background-image: url(images/rc-b-r-5-1header-2tab-selected-3tab-selected.png);
+    background-repeat: no-repeat;
+    background-position: top right;
 }
 
 img.cornersmall {
@@ -243,21 +249,21 @@ img.cornersmall {
 
 #menuarea { width:10em;}
 #menu {
-	position: relative;
-	float: left;
-	width: 160px;
-	padding-top: 0px;
-	top:-17px; 
-	left:10px; 
-	z-index: 20;
-	background-color: #f90;
-	font-size : 70%;    
+    position: relative;
+    float: left;
+    width: 160px;
+    padding-top: 0px;
+    top:-18px; 
+    left:10px; 
+    z-index: 20;
+    background-color: #f90;
+    font-size : 70%;    
 }
 
 .menutitle { 
         cursor:pointer;
         padding: 3px 12px;
-		margin-left: 10px;
+        margin-left: 10px;
         background-image: url('images/chapter.gif');
         background-repeat: no-repeat;
         background-position: center left;
@@ -313,59 +319,59 @@ img.cornersmall {
         font-size : 90%;
 }
 #menu #credit {
-	text-align: center;  
+    text-align: center;  
 }
 
 #content {
-	padding: 20px 20px 20px 180px;
-	margin: 0;
-	font : small Verdana, Helvetica, sans-serif;  
-	font-size : 80%; 
+    padding: 20px 20px 20px 180px;
+    margin: 0;
+    font : small Verdana, Helvetica, sans-serif;  
+    font-size : 80%; 
 }
 
 #content ul {
-	margin: 0;
-	padding: 0 25px;
+    margin: 0;
+    padding: 0 25px;
 }
 #content li {
-	padding: 0 5px;
+    padding: 0 5px;
 }
 #feedback {
-	color: black;
-	background: #CFDCED;
-	text-align:center;
-	margin-top: 5px;
+    color: black;
+    background: #CFDCED;
+    text-align:center;
+    margin-top: 5px;
 }
 #feedback #feedbackto {
-	font-size: 90%;
-	color: black;
+    font-size: 90%;
+    color: black;
 }
 #footer {
-	clear: both;
-	position: relative; /* IE bugfix (http://www.dracos.co.uk/web/css/ie6floatbug/) */
-	width: 100%;
-	background: #CFDCED;
-	border-top: solid 1px #4C6C8F;
-	color: black;
+    clear: both;
+    position: relative; /* IE bugfix (http://www.dracos.co.uk/web/css/ie6floatbug/) */
+    width: 100%;
+    background: #CFDCED;
+    border-top: solid 1px #4C6C8F;
+    color: black;
 }
 #footer .copyright {
-	position: relative; /* IE bugfix cont'd */
-	padding: 5px;
-	margin: 0;
-	width: 45%;
+    position: relative; /* IE bugfix cont'd */
+    padding: 5px;
+    margin: 0;
+    width: 45%;
 }
 #footer .lastmodified {
-	position: relative; /* IE bugfix cont'd */
-	float: right;
-	width: 45%;
-	padding: 5px;
-	margin: 0;
-	text-align: right;
+    position: relative; /* IE bugfix cont'd */
+    float: right;
+    width: 45%;
+    padding: 5px;
+    margin: 0;
+    text-align: right;
 }
 #footer a { color: white; }
 
 #footer #logos {
-	text-align: left;
+    text-align: left;
 }
 
 
@@ -374,58 +380,69 @@ img.cornersmall {
  */
 
 acronym { cursor: help; }
-.boxed 	 { background-color: #a5b6c6;}
-.underlined_5 	{border-bottom: solid 5px #4C6C8F;}
-.underlined_10 	{border-bottom: solid 10px #4C6C8F;}
+.boxed      { background-color: #a5b6c6;}
+.underlined_5     {border-bottom: solid 5px #4C6C8F;}
+.underlined_10     {border-bottom: solid 10px #4C6C8F;}
+/* ==================== snail trail ============================ */
+
+.trail {
+  font-size: 70%; 
+  text-align: right;
+  float: right;
+  margin: 0px 5px;
+  padding: 0;
+}
+
 #minitoc-area {
-	border-top: solid 1px #4C6C8F;
-	border-bottom: solid 1px #4C6C8F;	
-	margin-bottom: 15px;
-	margin-left: 15px;
-	padding-bottom: 5px;
-	padding-top: 5px;
+    border-top: solid 1px #4C6C8F;
+    border-bottom: solid 1px #4C6C8F;    
+    margin-bottom: 15px;
+    margin-left: 15px;
+    margin-right: 10%;
+    padding-bottom: 5px;
+    padding-top: 5px;
 }
 .minitoc    { 
-	list-style-image: url('images/current.gif'); 
-	font-weight: normal;
+    list-style-image: url('images/current.gif'); 
+    font-weight: normal;
 }
 li p {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 .pdflink {
-	float: right;
-	margin: 0;
-	padding: 0;
+    float: right;
+    margin: 0px 5px;
+    padding: 0;
 }
 .pdflink br {
-	margin-top: -10px;
-	padding-left: 1px;
+    margin-top: -10px;
+    padding-left: 1px;
 }
 .pdflink a {
-	display: block;
-	font-size: 70%;
-	text-align: center;
-	margin: 0;
-	padding: 0;
+    display: block;
+    font-size: 70%;
+    text-align: center;
+    margin: 0;
+    padding: 0;
 }
 
 .pdflink img {
-	display: block;
-	height: 16px;
-	width: 16px;
+    display: block;
+    height: 16px;
+    width: 16px;
 }
 .printlink {
-	float: right;
+    float: right;
 }
 .printlink a {
-	display: block;
-	text-align: center;
-	margin: 0 5px;
+    display: block;
+    text-align: center;
+    margin: 0 5px;
 }
 .printlink img {
-	display: block;
-	height: 32px;
-	width: 32px;
+    display: block;
+    height: 32px;
+    width: 32px;
 }
