fixed the level2tabs bug
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@45926 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/pelt/css/screen.css
+++ b/src/core/context/skins/pelt/css/screen.css
@@ -157,6 +157,12 @@ html>body #top .searchbox {
 #tabs a { float: none; }
 /* End IE5-Mac hack */
 
+#level2tabs {
+    clear: both;
+    margin: 0;
+    text-align:left;
+}
+ 
 #top .header .current {
     background-color: #4C6C8F;
     background-image: url(images/rc-t-r-5-1header-2tab-selected-3tab-selected.png);
@@ -171,15 +177,19 @@ html>body #top .searchbox {
     background-repeat: no-repeat;
     background-position: top left;
 }
-#published { 
+#publishedStrip { 
     padding-right: 10px;
+    padding-left: 20px;
+    padding-top: 3px;
     color: #ffffff;
     font-size : 60%; 
-    text-align: right;  
+    font-weight: bold;
     white-space:nowrap;
     background-color: #4C6C8F;
 }
-
+#publishedStrip .lastmodified{
+    float: right;  
+}
 /*
 *    border-top: solid #4C6C8F 15px;
 */
