http://marc.theaimsgroup.com/?t=109507744000001&r=1&w=2 fixed that the pdf link and fontsize script not showed up (IE bug)
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@45997 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/pelt/css/screen.css
+++ b/src/core/context/skins/pelt/css/screen.css
@@ -396,10 +396,11 @@ acronym { cursor: help; }
 /* ==================== snail trail ============================ */
 
 .trail {
+  position: relative; /* IE bugfix cont'd */
   font-size: 70%; 
   text-align: right;
   float: right;
-  margin: 0px 5px;
+  margin: -10px 5px 0px 5px;
   padding: 0;
 }
 
@@ -422,6 +423,7 @@ li p {
 }
 
 .pdflink {
+    position: relative; /* IE bugfix cont'd */
     float: right;
     margin: 0px 5px;
     padding: 0;
