fixed the default color setting but still have problems with the 2 span in one row. One span should align left, the other right. ...but only konqueror is doing the right display :(
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@46018 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/pelt/css/screen.css
+++ b/src/core/context/skins/pelt/css/screen.css
@@ -88,7 +88,9 @@ table caption {
     padding: 7px 0 10px 10px;
     float: right;
 }
-
+html>body #top .searchbox {
+    bottom: 0px;
+}
 #top .searchbox {
     position: absolute;
     right: 10px;
@@ -104,9 +106,7 @@ table caption {
     background-position: top left;    
     bottom: -1px; /* compensate for IE rendering issue */
 }
-html>body #top .searchbox {
-    bottom: 0px;
-}
+
 #top .searchbox form {
     padding: 5px 10px;
     margin: 0;
@@ -157,12 +157,6 @@ html>body #top .searchbox {
 #tabs a { float: none; }
 /* End IE5-Mac hack */
 
-#level2tabs {
-    clear: both;
-    margin: 0;
-    text-align:left;
-}
- 
 #top .header .current {
     background-color: #4C6C8F;
     background-image: url(images/rc-t-r-5-1header-2tab-selected-3tab-selected.png);
@@ -181,14 +175,20 @@ html>body #top .searchbox {
     padding-right: 10px;
     padding-left: 20px;
     padding-top: 3px;
+    padding-bottom:3px;
     color: #ffffff;
     font-size : 60%; 
     font-weight: bold;
-    white-space:nowrap;
     background-color: #4C6C8F;
 }
+#publishedStrip #level2tabs {
+    margin: 3px 0px;
+    text-align:left;
+    padding: 3px 0px;
+}
 #publishedStrip .lastmodified{
-    float: right;  
+float:right;
+top: 15px;
 }
 /*
 *    border-top: solid #4C6C8F 15px;
@@ -197,7 +197,6 @@ html>body #top .searchbox {
     position: relative;
     clear: both;
     background: white;
-
 }
 #main .breadtrail {
     position: relative;
