fixed the floating bug :)
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@46023 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/pelt/css/screen.css
+++ b/src/core/context/skins/pelt/css/screen.css
@@ -180,25 +180,25 @@ html>body #top .searchbox {
     font-size : 60%; 
     font-weight: bold;
     background-color: #4C6C8F;
+    text-align:right;
 }
-#publishedStrip #level2tabs {
-    margin: 3px 0px;
-    text-align:left;
-    padding: 3px 0px;
+
+#level2tabs {
+margin: 0;
+float:left; 
+position:relative;
 }
-#publishedStrip .lastmodified{
-float:right;
-top: 15px;
-}
+
 /*
 *    border-top: solid #4C6C8F 15px;
 */
 #main {
     position: relative;
-    clear: both;
     background: white;
+    clear:both;
 }
 #main .breadtrail {
+    clear:both;
     position: relative;
     background: #CFDCED;
     color: black;
