Did some work on leather, mainly thoughts.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@46054 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/leather-dev/css/branding.css
+++ b/src/core/context/skins/leather-dev/css/branding.css
@@ -40,7 +40,7 @@ text-align: left;
 /*Used for the projectlogo.
 */
 padding: 7px 0 10px 10px;
-float: left;
+float: right;
 width: 33%;
 text-align: right;
 }
