did some further work on leather-dev
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@46171 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/leather-dev/css/branding.css
+++ b/src/core/context/skins/leather-dev/css/branding.css
@@ -19,6 +19,7 @@ font-size: 75%;
 #branding-trail-a1{
 /*Used for the trail of the site.
 */
+clear:both;
 position: relative;
 background-color: #CFDCED;
 color: black;
@@ -50,46 +51,16 @@ text-align: right;
 padding: 7px 0 10px 10px;
 float: right;
 }
-/*
-#search
-Related to search interface and search results
-
-#search-input
-Search form container
-*/
-#branding .searchbox {
-/*Related to search interface and search results
-*/
-position: absolute;
-right: 10px;
-height: 42px;
-font-size: 70%;
-white-space: nowrap;
-text-align: right;
-color: white;
-background-color: #ccc;
-z-index:0;
-bottom: -1px; /* compensate for IE rendering issue */
-}
-html>body #branding .searchbox {
-bottom: 0px;
-}
-#branding .searchbox form {
-padding: 5px 10px;
-margin: 0;
-}
-#branding .searchbox p {
-padding: 0 0 2px 0;
-margin: 0;
-}
-
-#branding-published{
+#branding-tagline{
 /*Used for the last published note of the site.
 */
 clear: both;
 padding-right: 10px;
+padding-top: 3px;
+padding-bottom:3px;
 color: #fff;
-font-size : 70%; 
+font-size : 70%;
+font-weight: bold;
 text-align: right;  
 white-space:nowrap;
 background-color: #4C6C8F;
