--- a/src/core/context/skins/leather-dev/css/xnc-base.css
+++ b/src/core/context/skins/leather-dev/css/xnc-base.css
@@ -13,6 +13,75 @@ border-left: solid 1px black;
 margin: 5px;
 }
 
+/**
+* Round corner
+*/
+.roundtop { 
+    background-image: url(images/rc-t-r-15-1body-2menu-3menu.png);
+    background-repeat: no-repeat;
+    background-position: top right;
+}
+
+.roundbottom {
+    background-image: url(images/rc-b-r-15-1body-2menu-3menu.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
+}
+.roundbottom-left {
+    background-image: url(images/rc-b-l-15-1body-2menu-3menu.png);
+    background-repeat: no-repeat;
+    background-position: bottom left;
+}
+.roundtopsmall { 
+    background-image: url(images/rc-t-r-5-1header-2searchbox-3searchbox.png);
+    background-repeat: no-repeat;
+    background-position: top right;    
+}
+
+.roundbottomsmall {
+    background-image: url(images/rc-b-r-5-1header-2tab-selected-3tab-selected.png);
+    background-repeat: no-repeat;
+    background-position: top right;
+}
+/*
+#search
+Related to search interface and search results
+
+#search-input
+Search form container
+*/
+html>body .search-input {
+bottom: 0px;
+}
+ .search-input {
+/*Related to search interface and search results
+*/
+ position: absolute;
+/*float:right;*/
+    right: 10px;
+    height: 42px;
+    font-size: 70%;
+    white-space: nowrap;
+    text-align: right;
+    color: white;
+    background-color: #000000;
+    z-index:0;
+    background-image: url(images/rc-t-l-5-1header-2searchbox-3searchbox.png);
+    background-repeat: no-repeat;
+    background-position: top left;    
+    bottom: -1px; /* compensate for IE rendering issue */
+}
+
+ .search-input form {
+padding: 5px 10px;
+margin: 0;
+}
+ .search-input p {
+padding: 0 0 2px 0;
+margin: 0;
+}
+
+
 #content-main{
 /*The main content area
 */
