--- a/src/core/context/skins/leather-dev/css/navigation.css
+++ b/src/core/context/skins/leather-dev/css/navigation.css
@@ -9,14 +9,19 @@ Main or primary navigation AKA tabs.
 #nav-main-sub
 Secondary navigation AKA level2.
 */
+#nav {
+clear:both;
+
+
+font-size : 75%;
+bottom:0;
+}
 #nav-main {
-clear: both;
+list-style: none;
 padding-left: 10px;
 margin: 0;
-list-style: none;
-font-size : 75%;
 }
-/*background: #CFDCED url("images/tab-right.gif") no-repeat right top;*/
+
 #nav-main li {
 float: left;
 background-image: url(images/rc-t-r-5-1header-2tab-unselected-3tab-unselected.png);
@@ -27,7 +32,6 @@ margin: 0 3px 0 0;
 padding: 0;
 }
 
-/*background: url("images/tab-left.gif") no-repeat left top;*/
 #nav-main li a {
 float: left;
 display: block;
@@ -48,11 +52,10 @@ width: .1em; /* IE/Win fix */
 /* Commented Backslash Hack hides rule from IE5-Mac \*/
 #nav-main a { float: none; }
 /* End IE5-Mac hack */
-/*
-#nav-main .current
-Main or primary navigation that is currently selected.
-*/
+
 #nav-main .current {
+/*Main or primary navigation that is currently selected.
+*/
 background-color: #4C6C8F;
 background-image: url(images/rc-t-r-5-1header-2tab-selected-3tab-selected.png);
 background-repeat: no-repeat;
@@ -66,6 +69,14 @@ background-image: url(images/rc-t-l-5-1header-2tab-selected-3tab-selected.png);
 background-repeat: no-repeat;
 background-position: top left;
 }
+
+#nav-main-level2tabs {
+padding-left: 25px;
+margin: 0;
+float:left; 
+position:relative;
+}
+
 #nav-section a {  
 color: black;
 font-weight: normal;
@@ -86,15 +97,20 @@ font-weight: normal;
 #nav-section {
 /*Navigation to pages within the current site section AKA menu.
 */
+  
 position: relative;
 float: left;
 width: 160px;
 padding-top: 0px;
-top:-18px; 
+top:-15px; 
 left:10px; 
 z-index: 20;
 background-color: #4C6C8F;
 font-size : 70%;
+}
+
+#nav-section .roundbottom {
+padding-bottom: 10px;
 }
 
 .nav-section-title { 
