--- a/scratchpad/eclipsePlugin/src/org/apache/forrest/template/new_xdoc.xml
+++ b/scratchpad/eclipsePlugin/src/org/apache/forrest/template/new_xdoc.xml
@@ -2,7 +2,7 @@
 <!DOCTYPE document PUBLIC "-//APACHE//DTD Documentation V2.0//EN" "http://forrest.apache.org/dtd/document-v20.dtd">
 <document> 
   <header> 
-    <title>New XDoc File</title> 
+    <title>@title@</title> 
   </header> 
   <body> 
     <!--  Add your content here -->
