Update whole site. Fix search. Was doing whole Internet. Fix floating search box. Fix level2tabs and SwitchMenu().
git-svn-id: https://svn.apache.org/repos/asf/forrest/site@46238 13f79535-47bb-0310-9956-ffa450edef68

--- a/skin/profile.css
+++ b/skin/profile.css
@@ -47,31 +47,38 @@ a.external  {
 #tabs li a:visited { color: #0F3660; }
 #tabs li a:hover { color: #000066; }
 
+#level2tabs       { background-color: #4a6d8c ;} 
+#level2tabs a:link {  color: #0F3660;  }
+#level2tabs a:visited { color: #0F3660; }
+#level2tabs a:hover { color: #000066; }
+
+.heading { background-color: #294563;} 
+
 .boxed { background-color: #4a6d8c;} 
 .underlined_5 	{border-bottom: solid 5px #4a6d8c;}
 .underlined_10 	{border-bottom: solid 10px #4a6d8c;}
 table caption { 
-	background-color: #4a6d8c; 
-	color: #000000;
+background-color: #4a6d8c; 
+color: #000000;
 }
 
 #published { 
-    color: #FFFFFF;
-    background: #4C6C8F; 
+color: #FFFFFF;
+background: #4C6C8F; 
 }
     
 #feedback {
-	color: #FFFFFF;
-	background: #4C6C8F;
-	text-align: center;
+color: #FFFFFF;
+background: #4C6C8F;
+text-align: center;
 }
 #feedback #feedbackto {
-	color: #FFFFFF;
+color: #FFFFFF;
 }   
 
 #published { 
-    color: #ffffff;
-    background: #4a6d8c; 
+color: #ffffff;
+background: #4a6d8c; 
 }
 
 #menu .menupagetitle  { background-color: #4a6d8c}
@@ -84,29 +91,38 @@ table caption {
 #menu  {  color: #cedfef;} 
 #menu a:link {  color: #ffffff;} 
 #menu a:visited {  color: #ffffff;} 
-#menu a:hover {  background-color: #4a6d8c;
-                 color: #ffcf00;} 
-#menu .menupagetitle  { color: #ffcf00;}     
+#menu a:hover {  
+background-color: #4a6d8c;
+color: #ffcf00;} 
 
 #menu h1 {
-    color: #000000;
-    background-color: #cfdced;
+color: #000000;
+background-color: #cfdced;
 }   
  
 #top .searchbox { 
-    background-color: #E5E4D9 ;
-    color: #000000; 
+background-color: #E5E4D9 ;
+color: #000000; 
 } 
  
+#menu .menupagetitle  { color: #000000;}    
 #menu .menupageitemgroup     { 
-	background-color: #4a6d8c;
+background-color: #4a6d8c;
 }
 #menu .menupageitem {
-	color: #000000;
+color: #000000;
 } 
+#menu .menupageitem a:link {  color: #0000ff;} 
+#menu .menupageitem a:visited {  color: #0000ff;} 
+#menu .menupageitem a:hover {  
+background-color: #4a6d8c;
+color: #0000ff;
+}
 
-body         { background-color: #ffffff;
-               color: #000000;} 
+body{ 
+background-color: #ffffff;
+color: #000000;
+} 
 a:link { color:#0F3660} 
 a:visited { color:#009999} 
 a:hover { color:#000066} 
