--- a/skin/screen.css
+++ b/skin/screen.css
@@ -88,7 +88,9 @@ table caption {
     padding: 7px 0 10px 10px;
     float: right;
 }
-
+html>body #top .searchbox {
+    bottom: 0px;
+}
 #top .searchbox {
     position: absolute;
     right: 10px;
@@ -104,9 +106,7 @@ table caption {
     background-position: top left;    
     bottom: -1px; /* compensate for IE rendering issue */
 }
-html>body #top .searchbox {
-    bottom: 0px;
-}
+
 #top .searchbox form {
     padding: 5px 10px;
     margin: 0;
@@ -171,13 +171,22 @@ html>body #top .searchbox {
     background-repeat: no-repeat;
     background-position: top left;
 }
-#published { 
+#publishedStrip { 
     padding-right: 10px;
+    padding-left: 20px;
+    padding-top: 3px;
+    padding-bottom:3px;
     color: #ffffff;
     font-size : 60%; 
-    text-align: right;  
-    white-space:nowrap;
+    font-weight: bold;
     background-color: #4C6C8F;
+    text-align:right;
+}
+
+#level2tabs {
+margin: 0;
+float:left; 
+position:relative;
 }
 
 /*
@@ -185,11 +194,11 @@ html>body #top .searchbox {
 */
 #main {
     position: relative;
-    clear: both;
     background: white;
-
+    clear:both;
 }
 #main .breadtrail {
+    clear:both;
     position: relative;
     background: #CFDCED;
     color: black;
@@ -386,10 +395,11 @@ acronym { cursor: help; }
 /* ==================== snail trail ============================ */
 
 .trail {
+  position: relative; /* IE bugfix cont'd */
   font-size: 70%; 
   text-align: right;
   float: right;
-  margin: 0px 5px;
+  margin: -10px 5px 0px 5px;
   padding: 0;
 }
 
@@ -412,6 +422,7 @@ li p {
 }
 
 .pdflink {
+    position: relative; /* IE bugfix cont'd */
     float: right;
     margin: 0px 5px;
     padding: 0;
