Add a bit more space to lines to make it more readable on smaller monitors.
Added a some top-bottom margin to list elements that were too crammed.

Added some top margin to header elements (too crammed too).

git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@47060 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/pelt/css/screen.css
+++ b/src/core/context/skins/pelt/css/screen.css
@@ -16,10 +16,10 @@
 body {  margin: 0px 0px 0px 0px; font-family: Verdana, Helvetica, sans-serif; }
 
 h1     { font-size : 160%; margin: 0px 0px 0px 0px;  padding: 0px; }
-h2     { font-size : 140%; margin: 0px 0px 0px 0px; padding: 0px; font-weight : bold;}
-h3     { font-size : 130%; margin: 0px 0px 0px 0px; padding: 0px; font-weight : bold; }
+h2     { font-size : 140%; margin: 0.9em 0px 0px 0px; padding: 0px; font-weight : bold;}
+h3     { font-size : 130%; margin: 0.8em 0px 0px 0px; padding: 0px; font-weight : bold; }
 .h3 { margin: 22px 0px 3px 0px; }
-h4     { font-size : 120%; margin: 0px 0px 0px 0px; padding: 0px; font-weight : normal; text-align: left; }
+h4     { font-size : 120%; margin: 0.7em 0px 0px 0px; padding: 0px; font-weight : normal; text-align: left; }
 .h4 { margin: 18px 0px 0px 0px; }
 h4.faq { font-size : 120%; margin: 18px 0px 0px 0px; padding: 0px; font-weight : bold;   text-align: left; }
 h5     { font-size : 100%; margin: 14px 0px 0px 0px; padding: 0px; font-weight : normal; text-align: left; }
