--- a/src/core/context/skins/pelt/css/basic.css
+++ b/src/core/context/skins/pelt/css/basic.css
@@ -49,7 +49,7 @@ img { border: 0; }
   padding: 5px 10px;
   background: #F0F0FF;
   color: black;
-  line-height: 110%;
+  line-height: 120%;
   font-size: 90%;
 }
 .warning .label {
@@ -116,7 +116,7 @@ h5 { font-size: 80%; }
 h6 { font-size: 75%; }
 
 p {
-  line-height: 110%;
+  line-height: 120%;
   text-align: left;
   margin-top: .5em;
   margin-bottom: 1em;
@@ -125,7 +125,9 @@ p {
 #content li,
 #content th,
 #content td {
-  line-height: 110%;
+  line-height: 110%;  
+  margin-top: .1em;
+  margin-bottom: .1em;
 }
 
 #content .attribution {
