fixed a color profile issue and my old changes from leather
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@47141 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/leather-dev/css/navigation.css
+++ b/src/core/context/skins/leather-dev/css/navigation.css
@@ -70,7 +70,7 @@ background-repeat: no-repeat;
 background-position: top left;
 }
 
-#nav-main-level2tabs {
+#nav-main-sub {
 padding-left: 25px;
 margin: 0;
 float:left; 
